# rest_api_reservation_table_app_on_fastapi

./: .dockerignore  .env.example  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/application/: app.py
src/application/api/: router.py
src/application/api/v1/: router.py
src/application/api/v1/handlers/table/: router.py  schemas.py
src/application/core/: __init__.py  config.py  logger.py
src/application/core/infrastructure/: database.py
src/application/core/infrastructure/di/: container.py
src/application/core/infrastructure/di/modules/: reservation.py  table.py
src/domain/: base.py
src/domain/migrations/: env.py
src/domain/migrations/versions/: 2025_04_08_1928-678980585fa3_.py  2025_04_10_0941-bc3766e80ef4_.py
src/domain/models/: __init__.py  base.py  reservation.py  table.py
src/repositories/: base.py
src/repositories/modules/reservation/: dto.py  repository.py
src/repositories/modules/table/: dto.py  repository.py
src/services/: base.py  exceptions.py
src/services/modules/table/: exceptions.py  service.py
tests/: conftest.py  fixtures.py
tests/ integration/: test_table_api.py
tests/unit/: test_reservation.py  test_table.py
